...

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/Recuperar_contraseña"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/layoutemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="255dp"
        android:layout_marginEnd="168dp"
        android:gravity="center"
        android:text="Recuperar Contraseña"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

</RelativeLayout>
