...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingRight="5px"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:id="@+id/show_options_button"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_redondo"
                android:text="Agregar Imagen" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/listo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849"
        tools:ignore="UnknownId">
...
                    android:layout_height="wrap_content"
                    android:text="Nombre"
                    android:textColor="@color/headings"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp" />

...
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />
                </LinearLayout>

                <ImageButton
                    android:id="@+id/ib_obtener_fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginRight="8dp"
...
                        android:layout_height="1dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/grey" />
                </LinearLayout>

                <Button
                    android:id="@+id/ubicacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondo"
                    android:text="ubicación" />

...
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondo"
                    android:text="-" />

                <Button
                    android:id="@+id/mas"
                    android:layout_width="41dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/boton_redondo"
                    android:text="+" />

...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/desde"
                        android:layout_width="354dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light"
                        android:hint="Desde (Click para editar)"
                        android:inputType="time"
                        android:textColor="#000000" />

                    <EditText
                        android:id="@+id/hasta"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:focusable="false"
                        android:fontFamily="sans-serif-light"
...
                android:layout_height="wrap_content"
                android:text="Descripción"
                android:textColor="@color/headings"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:inputType="textPersonName"
                android:textColor="#000000" />
...
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/boton_redondo"
        android:text="Publicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
...
